--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "21.1.2"
+    compileSdkVersion 27
+
 
     defaultConfig {
         applicationId "com.bartoszlipinski.flippablestackview.sample"
-        minSdkVersion 14
-        targetSdkVersion 21
+        minSdkVersion 19
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
     }
@@ -20,5 +20,7 @@ android {
 }
 
 dependencies {
-    compile project(':library')
+    implementation 'com.android.support:appcompat-v7:27+'
+    implementation 'com.android.support:support-v4:27+'
+    implementation project(':library')
 }
